[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "The OftLisp bootstrapper."
license = "Apache-2.0/MIT"
name = "oftb"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
human-panic = "0.4.0"
log = "0.4.1"
pest = "1.0.6"
pest_derive = "1.0.6"
podio = "0.1.6"
semver = "0.9.0"
stderrlog = "0.4.0"
structopt = "0.2.5"
symbol = "0.1.1"

[dev-dependencies]
proptest = "0.7.0"

[[bin]]
name = "oftbc"
path = "src/bin/oftbc/main.rs"

[[bin]]
name = "oftbi"
path = "src/bin/oftbi/main.rs"
