[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "The OftLisp bootstrapper."
license = "Apache-2.0/MIT"
name = "oftb"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
human-panic = "0.4.0"
lazy_static = "1.0.0"
log = "0.4.1"
pest = "1.0.6"
pest_derive = "1.0.6"
podio = "0.1.6"
semver = "0.9.0"
stderrlog = "0.4.0"
structopt = "0.2.5"
symbol = "0.1.1"
num = "0.1.42"

[dev-dependencies]
proptest = "0.7.0"

[[bin]]
name = "oftb"
path = "src/bin/main.rs"
